syntax = "proto2";

package io.delta.exchange.protocol;

import "scalapb/scalapb.proto";

option java_package = "io.delta.exchange.protocol";

option java_generate_equals_and_hash = true;
option (scalapb.options).flat_package = true;

message PageToken {
    optional string id = 1;
}

message Share {
    optional string name = 1;
}

message Schema {
    optional string name = 1;
    optional string share = 2;
}

message Table {
    optional string name = 1;
    optional string schema = 2;
    optional string share = 3;
}

message QueryTableRequest {
    repeated string predicateHints = 1;
    optional int32 limitHint = 2;
}

message ListSharesResponse {
    repeated Share items = 1;
    optional string next_page_token = 2;
}

message ListSchemasResponse {
    repeated Schema items = 1;
    optional string next_page_token = 2;
}

message ListTablesResponse {
    repeated Table items = 1;
    optional string next_page_token = 2;
}
